# ade_ros

./: .gitignore  README.md  test_file.txt
arduino_program/servo_simple/: servo_simple.ino
install/: local_setup.sh  setup.sh
install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh  package.xml
install/custom_interfaces/share/custom_interfaces/srv/: InterpolateTrajectory.idl  InterpolateTrajectory.srv  InterpolateTrajectory_Request.msg
install/http_control_panel/share/http_control_panel/: package.bash  package.sh
install/trajectory_interpolation/share/trajectory_interpolation/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
ros_host/workspace_1/.cargo/: config.toml
ros_host/workspace_1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_host/workspace_1/launch/: start.py  start_launch.py
ros_host/workspace_1/log/: latest_build
ros_host/workspace_1/src/custom_interfaces/: CMakeLists.txt
ros_host/workspace_1/src/http_control_panel/: setup.cfg  setup.py
ros_host/workspace_1/src/log/: latest_build
ros_host/workspace_1/src/serial_controller/: CMakeLists.txt  package.xml
ros_host/workspace_1/src/test_package/: setup.py
ros_host/workspace_1/src/trajectory_interpolation/: CMakeLists.txt
ros_host/workspace_1/src/trajectory_interpolation/src/: dummy.cpp  dummy.h  interpolate_trajectory_server.cpp  interpolate_trajectory_server.h  main.cpp  trajectory_interpolator.cpp  trajectory_interpolator.h
service_files/: exec-ros  ros.service
(+91 files in other folders)
